// Vitest Snapshot v1

exports[`<NoneFound /> > should render with [noun='files' 1`] = `
<NoneFound__StyledNoneFound>
  <Icon
    name="info-circle"
  />
   No 
  files
   found
</NoneFound__StyledNoneFound>
`;

exports[`<NoneFoundBox /> > should render with [noun='boxes' 1`] = `
<NoneFoundBox__StyledNoneFoundBox
  as={
    {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": [],
      "componentStyle": e {
        "baseHash": -1700734099,
        "baseStyle": undefined,
        "componentId": "Box-sc-1gxeswo-0",
        "isStatic": false,
        "rules": [
          "border:",
          [Function],
          ";border-radius:",
          [Function],
          ";box-sizing:border-box;cursor:",
          [Function],
          ";margin-bottom:15px;padding:10px 15px;position:relative;&:hover{",
          [Function],
          "}",
        ],
        "staticRulesId": "",
      },
      "foldedComponentIds": [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "Box-sc-1gxeswo-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
>
  <Icon
    name="info-circle"
  />
   No 
  boxes
   found.   
</NoneFoundBox__StyledNoneFoundBox>
`;

exports[`<NoneFoundSection /> > should render with [noun='sections' 1`] = `
<NoneFoundSection__StyledNoneFoundSection>
  <Icon
    name="info-circle"
  />
   No 
  sections
   found
</NoneFoundSection__StyledNoneFoundSection>
`;

exports[`<NoneFoundSection /> > should render with [noun='sections'] and children 1`] = `
<NoneFoundSection__StyledNoneFoundSection>
  <Icon
    name="info-circle"
  />
   No 
  sections
   found
  <span>
    . 
    <span>
      foo
    </span>
    .
  </span>
</NoneFoundSection__StyledNoneFoundSection>
`;
